# ITAM

./: .env.example  manage.py  pyproject.toml  requirements.txt  supabase_enable_rls.sql  supabase_inventory_schema.sql  tash
.cursor/skills/verfiy-frontend-change/: SKILL.md
inventory/: access.py  admin.py  context_processors.py  filters.py  forms.py  http.py  models.py  tests.py  urls.py  version.py  views.py  views_auth.py  views_employee.py  views_extras.py  views_staff_employees.py
inventory/management/commands/: dedupe_data.py
inventory/migrations/: 0001_initial.py  0004_alter_asset_date_created_and_more.py  0005_alter_employee_department.py  0007_employeenotification.py  0014_userprofile_avatar_storage_backend.py  0015_track_created_by_on_activity_models.py
inventory/services/: asset_import.py  avatars.py  background_jobs.py  employee_notifications.py  metrics.py  profile_stats.py
inventory/static/inventory/: auth_base.html
inventory/templates/inventory/: asset_confirm_delete.html  asset_detail.html  asset_form.html  asset_list.html  assign_asset.html  auth.html  base.html  dashboard.html  employee_confirm_delete.html  employee_detail.html  employee_form.html  employee_list.html  error.html  notifications.html  profile.html  reports.html  settings.html  sidebar.html
inventory/tests/: _helpers.py  test_api.py  test_auth_and_import.py  test_employee_and_avatar.py  test_forms_and_views.py
media/exports/: itam_asset_report_8a4596b7-7926-41b2-87f5-b3d64d77fe9b.csv
staticfiles/inventory/css/: footer.css  (+6 more)
tracker/: asgi.py  settings.py  urls.py  wsgi.py
(+123 files in other folders)
