[project]
name = "itam"
version = "3.0.0"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.1",
    "Django==5.2.15",
    "django-environ==0.14.0",
    "gunicorn==25.1.0",
    "psycopg2-binary==2.9.12",
    "sqlparse==0.5.5",
    "whitenoise==6.12.0",
]

[tool.vercel]
entrypoint = "tracker.wsgi:application"

[tool.vercel.scripts]
build = "python manage.py migrate --noinput"
